# tanoshi

./: 7  CMakeLists.txt  config
include/: clogger.h  collections.h  config.h  log-manager.h  memory-allocator.h  utils.h
include/clogger/: clogger.h
include/tanoshi/: collections.h  config.h  custom_types.h  hash.h  linked-list.h  log-manager.h  master-manager.h  memory-allocator.h  utils.h
src/: collections.c  hash.c  log-manager.c  main.c  master-manager.c  memory-allocator.c
src/collections/: linked-list.c
src/managers/: config.c  log-manager.c  master-manager.c
src/memory/: memory-allocator.c
test/: collections.c  collections_test.c  main_test.c  test.c
